@@ -1,4 +1,4 @@
-#VRML V2.0 utf8 CosmoWorlds V1.0
+#X3D V3.3 utf8
 
 EXTERNPROTO QuadSphere [
   exposedField SFInt32 uDimension
