@@ -1,3 +1,7 @@
+2014-03-17  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* Geodetic.h: 
+
 2014-03-11  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* Matrix4.h:
